--- a/TF_BERT_Imdb_Sentiment.ipynb
+++ b/TF_BERT_Imdb_Sentiment.ipynb
@@ -96,7 +96,7 @@
         "            download_data()\n",
         "        else:\n",
         "            imdb_dir = listdir(\"aclImdb\")\n",
-        "            if not \"test\" in imdb_dir and not \"train\" in imdb_dir:\n",
+        "            if not \"test\" in imdb_dir or not \"train\" in imdb_dir:\n",
         "                download_data()\n",
         "    \n",
         "    def generate(self, val_split_perc: float):\n",
